FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(JNI REQUIRED)

INCLUDE(${SWIG_USE_FILE} ${JNI_USE_FILE})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2} ${JNI_INCLUDE_PATH})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/avogadro/src)
SET(CMAKE_SWIG_FLAGS "")

SET(CMAKE_C_FLAGS "-O2")
SET(CMAKE_CXX_FLAGS ${CMAKE_C_FLAGS})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

SUBDIRS (util)

