FILE(GLOB Interfaces */*.i)
#FILE(GLOB Wrapper *.cxx)

SET_SOURCE_FILES_PROPERTIES(${Interfaces} PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(${Interfaces} PROPERTIES SWIG_FLAGS "-includeall")

############ JAVA

FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(JNI REQUIRED)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../java)
SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../java)

INCLUDE(${SWIG_USE_FILE} ${JNI_USE_FILE})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2} ${JNI_INCLUDE_PATH})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/avogadro/src)

SWIG_ADD_MODULE(java java ${Interfaces} ${Wrapper})
SWIG_LINK_LIBRARIES(java ${JAVA_LIBRARIES})

########## Python

FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../python)
SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../python)

INCLUDE(${SWIG_USE_FILE})
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SWIG_ADD_MODULE(python python ${Interfaces} ${Wrapper})
SWIG_LINK_LIBRARIES(python ${PYTHON_LIBRARIES})
